--- a/src/com/roguedevstudios/uarg/System/UI/Resources/GUI.fxml
+++ b/src/com/roguedevstudios/uarg/System/UI/Resources/GUI.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.RadioMenuItem?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -17,83 +18,214 @@
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.VBox?>
 
 <BorderPane fx:id="Root" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.roguedevstudios.uarg.System.UI.GUIController">
   <center>
     <BorderPane fx:id="Root" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-      <center>
-        <TitledPane alignment="TOP_CENTER" animated="false" prefHeight="550.0" prefWidth="806.0" text="Residential Service Lines" BorderPane.alignment="CENTER">
-          <content>
-            <BorderPane prefHeight="200.0" prefWidth="200.0">
-              <center>
-                <TabPane prefHeight="200.0" prefWidth="200.0" side="BOTTOM" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
-                  <tabs>
-                    <Tab closable="false" text="Resid. Inputs">
-                      <content>
-                        <BorderPane prefHeight="200.0" prefWidth="200.0">
-                          <center>
-                            <TableView fx:id="ResidentialServiceLines" editable="true" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-                                             <columnResizePolicy>
-                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                                             </columnResizePolicy></TableView>
-                          </center>
-                        </BorderPane>
-                      </content>
-                    </Tab>
-                    <Tab closable="false" text="Resid. Annuals">
-                      <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                      </content>
-                    </Tab>
-                    <Tab closable="false" text="Corp. Inputs">
-                      <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                      </content>
-                    </Tab>
-                    <Tab closable="false" text="Corp. Annuals">
-                      <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                      </content>
-                    </Tab>
-                    <Tab closable="false" text="DropBox Inputs">
-                      <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                      </content>
-                    </Tab>
-                    <Tab closable="false" text="DropBox Annuals">
-                      <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                      </content>
-                    </Tab>
-                    <Tab closable="false" text="Mileage">
-                      <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                      </content>
-                    </Tab>
-                    <Tab text="   New   ">
-                      <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-                      </content>
-                    </Tab>
-                  </tabs>
-                </TabPane>
-              </center>
-            </BorderPane>
-          </content>
-        </TitledPane>
-      </center>
       <top>
         <SplitPane prefHeight="70.0" prefWidth="661.0" BorderPane.alignment="CENTER">
           <items>
             <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="56.0" prefWidth="804.0">
               <children>
                 <Button layoutX="14.0" layoutY="9.0" mnemonicParsing="false" text="Export" />
-            <Button layoutX="14.0" layoutY="39.0" mnemonicParsing="false" text="Add Service" />
+            <Button fx:id="AddService" layoutX="14.0" layoutY="39.0" mnemonicParsing="false" onAction="#AddServiceAction" text="Add Service" />
               </children>
             </AnchorPane>
           </items>
         </SplitPane>
       </top>
+         <center>
+            <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <content>
+                  <VBox prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                    <TitledPane alignment="TOP_CENTER" animated="false" prefHeight="550.0" prefWidth="806.0" text="Residential Service Lines" VBox.vgrow="SOMETIMES">
+                      <content>
+                        <BorderPane prefHeight="200.0" prefWidth="200.0">
+                          <center>
+                            <TabPane prefHeight="200.0" prefWidth="200.0" side="BOTTOM" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+                              <tabs>
+                                <Tab closable="false" text="Resid. Inputs">
+                                  <content>
+                                    <BorderPane prefHeight="200.0" prefWidth="200.0">
+                                      <center>
+                                        <TableView fx:id="ResidentialServiceLines" editable="true" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                                                         <columnResizePolicy>
+                                                            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                                         </columnResizePolicy>
+                                                      </TableView>
+                                      </center>
+                                    </BorderPane>
+                                  </content>
+                                </Tab>
+                                <Tab closable="false" text="Resid. Annuals">
+                                  <content>
+                                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                  </content>
+                                </Tab>
+                                <Tab closable="false" text="Corp. Inputs">
+                                  <content>
+                                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                  </content>
+                                </Tab>
+                                <Tab closable="false" text="Corp. Annuals">
+                                  <content>
+                                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                  </content>
+                                </Tab>
+                                <Tab closable="false" text="DropBox Inputs">
+                                  <content>
+                                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                  </content>
+                                </Tab>
+                                <Tab closable="false" text="DropBox Annuals">
+                                  <content>
+                                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                  </content>
+                                </Tab>
+                                <Tab closable="false" text="Mileage">
+                                  <content>
+                                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                  </content>
+                                </Tab>
+                                <Tab text="   New   ">
+                                  <content>
+                                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                  </content>
+                                </Tab>
+                              </tabs>
+                            </TabPane>
+                          </center>
+                        </BorderPane>
+                      </content>
+                    </TitledPane>
+                        <TitledPane animated="false" text="untitled">
+                           <content>
+                              <BorderPane prefHeight="200.0" prefWidth="200.0">
+                                 <center>
+                                    <TabPane prefHeight="200.0" prefWidth="200.0" side="BOTTOM" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+                                       <tabs>
+                                          <Tab closable="false" text="Resid. Inputs">
+                                             <content>
+                                                <BorderPane prefHeight="200.0" prefWidth="200.0">
+                                                   <center>
+                                                      <TableView fx:id="ResidentialServiceLines1" editable="true" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                                                         <columnResizePolicy>
+                                                            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                                         </columnResizePolicy>
+                                                      </TableView>
+                                                   </center>
+                                                </BorderPane>
+                                             </content>
+                                          </Tab>
+                                          <Tab closable="false" text="Resid. Annuals">
+                                             <content>
+                                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                             </content>
+                                          </Tab>
+                                          <Tab closable="false" text="Corp. Inputs">
+                                             <content>
+                                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                             </content>
+                                          </Tab>
+                                          <Tab closable="false" text="Corp. Annuals">
+                                             <content>
+                                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                             </content>
+                                          </Tab>
+                                          <Tab closable="false" text="DropBox Inputs">
+                                             <content>
+                                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                             </content>
+                                          </Tab>
+                                          <Tab closable="false" text="DropBox Annuals">
+                                             <content>
+                                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                             </content>
+                                          </Tab>
+                                          <Tab closable="false" text="Mileage">
+                                             <content>
+                                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                             </content>
+                                          </Tab>
+                                          <Tab text="   New   ">
+                                             <content>
+                                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                             </content>
+                                          </Tab>
+                                       </tabs>
+                                    </TabPane>
+                                 </center>
+                              </BorderPane>
+                           </content>
+                        </TitledPane>
+                        <TitledPane animated="false" text="untitled">
+                           <content>
+                              <BorderPane prefHeight="200.0" prefWidth="200.0">
+                                 <center>
+                                    <TabPane prefHeight="200.0" prefWidth="200.0" side="BOTTOM" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+                                       <tabs>
+                                          <Tab closable="false" text="Resid. Inputs">
+                                             <content>
+                                                <BorderPane prefHeight="200.0" prefWidth="200.0">
+                                                   <center>
+                                                      <TableView fx:id="ResidentialServiceLines2" editable="true" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                                                         <columnResizePolicy>
+                                                            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                                         </columnResizePolicy>
+                                                      </TableView>
+                                                   </center>
+                                                </BorderPane>
+                                             </content>
+                                          </Tab>
+                                          <Tab closable="false" text="Resid. Annuals">
+                                             <content>
+                                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                             </content>
+                                          </Tab>
+                                          <Tab closable="false" text="Corp. Inputs">
+                                             <content>
+                                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                             </content>
+                                          </Tab>
+                                          <Tab closable="false" text="Corp. Annuals">
+                                             <content>
+                                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                             </content>
+                                          </Tab>
+                                          <Tab closable="false" text="DropBox Inputs">
+                                             <content>
+                                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                             </content>
+                                          </Tab>
+                                          <Tab closable="false" text="DropBox Annuals">
+                                             <content>
+                                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                             </content>
+                                          </Tab>
+                                          <Tab closable="false" text="Mileage">
+                                             <content>
+                                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                             </content>
+                                          </Tab>
+                                          <Tab text="   New   ">
+                                             <content>
+                                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                             </content>
+                                          </Tab>
+                                       </tabs>
+                                    </TabPane>
+                                 </center>
+                              </BorderPane>
+                           </content>
+                        </TitledPane>
+                        <VBox prefHeight="200.0" prefWidth="100.0" VBox.vgrow="ALWAYS" />
+                     </children>
+                  </VBox>
+               </content>
+            </ScrollPane>
+         </center>
     </BorderPane>
   </center>
   <top>
